--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" src="style.css">
-
+        <title>Dan's Portfolio </title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
+        <h>Test</h>
     </body>
 </html>
