--- a/index.html
+++ b/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dan's Portfolio </title>
+        <title>Dan's Portfolio</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
-        <h>Test</h>
+
+        <div class="pimg1">
+            <div class="imTitle">
+                <span class="title">
+                    Parrallax Website
+                </div>
+            </div>
+        </div>
+
+        <section class="section section-light">
+            <h2>Section One</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem.</p>
+        </section>
+
+        <div class="pimg2">
+            <div class="imTitle">
+                <span class="i2title trans">
+                    Sample Text
+                </div>
+            </div>
+        </div>
+
+        <section class="section section-dark">
+            <h2>Section One</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. </p>
+        </section>
+
+        <div class="pimg3">
+            <div class="imTitle">
+                <span class="i3title trans">
+                    Even More Sample Text
+                </div>
+            </div>
+        </div>
+
+        <section class="section section-light">
+            <h2>Section One</h2> 
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem.</p>
+        </section>
+
+        <div class="navbar">
+            <div class="navLeftMenu">
+                <button class="navHome navItem">
+                    Home
+                </button>
+                <button class="navHome navItem">
+                    Projects
+                </button>
+                <button class="navHome navItem">
+                    About
+                </button>
+                <button class="navHome navItem">
+                    Contact
+                </button>
+            </div>
+            <div class="navRightMenu">
+                <button class="navLinkedIn navBtn"></button>
+                <button class="navReed navBtn"></button>
+                <button class="navGit navBtn"></button>
+            </div>
+        </div>
+
     </body>
 </html>
+
