--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Dan's Portfolio</title>
+        <title>Portfolio</title>
         <link rel="stylesheet" href="css/style.css">
     </head>
 
@@ -10,8 +10,8 @@
         <div class="pimg1">
             <div class="imTitle">
                 <span class="title">
-                    Parrallax Website
-                </div>
+                    Daniel "Yogzie" Hodgett
+                </span>
             </div>
         </div>
 
@@ -62,9 +62,8 @@
                 </button>
             </div>
             <div class="navRightMenu">
-                <button class="navLinkedIn navBtn"></button>
-                <button class="navReed navBtn"></button>
-                <button class="navGit navBtn"></button>
+                <a target="__blank" href="https://www.linkedin.com/in/daniel-hodgett-a5347724a/"><button class="navLinkedIn navBtn"><img class="navLinkedInImg" src="images/linkedIn.png"></button></a>
+                <a target="__blank" href="https://github.com/Yogzie"><button class="navGit navBtn"><img class="navGitImg" src="images/github.png"></button></a>
             </div>
         </div>
 
