Commenting and content.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
 
         <section class="section section-light">
-            <h2>Section One</h2> 
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab odit dolor doloribus reiciendis magni dolore temporibus fugit delectus commodi non nobis qui vel tempora soluta sint distinctio corporis, totam rem.</p>
+            <h2>Introduction</h2> 
+            <p>Hello and welcome to my portfolio! Within my portfolio website you'll be able to get a feel for what I'm capable of when it comes to the creation of software. All content showcased on this website is available on my <a href="https://github.com/Yogzie">Git Profile</a> for you to look at how I approach development of software for more strict purposes and less serious projects.</p>
         </section>
 
         <div class="pimg2">
